# matwerk-monitoring

./: .gitignore  README.md  app.py  dashboard.html  dashboard.settings.js  extract_ips.sh  ip_parsing.py  monitoring-dashboard.html  process_data.py  pyproject.toml  requirements.txt  run.sh
backups/: monitoring-dashboard.html
data/: EVOKS_unique_accesses.json  MS_plugin_usage_histogram.json  MS_user_distribution.json  MS_user_growth.json  choropleth.json  ips_2024-08-1.json  ips_2024-08-1_timestamps.json  plugin_usage_histogram.json  sample.json  sample2.json  unique_accesses.json  user_distribution.json  user_distribution_map.json  user_growth.json
matwerk-monitoring/: pyvenv.cfg
static/: chart_style.css  plotting.js
static/styles/: custom.css  styles.css
templates/: dce-metrics.html.j2  evoks-metrics.html.j2  fds-metrics.html.j2  index.html.j2  mapping-service-metrics.html.j2  mapping-service.html.j2  repo-metrics.html.j2
templates/components/: card.html.j2  medium_card.html.j2  small_card.html.j2
templates/partials/: footer.html.j2  head.html.j2  layout.html.j2  scripts.html.j2  side_nav.html.j2  top_nav.html.j2
venv-monitoring/: pyvenv.cfg
