[tool.poetry]
name = "rpdm-dashboard-template"
version = "0.1.0"
description = ""
authors = ["Jonathan Hartman <hartman@itc.rwth-aachen.de>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
Flask = "^3.0.3"
plotly = "^5.22.0"
pandas = "^2.2.2"

[tool.poetry.group.dev.dependencies]
pylint = "^3.2.5"
flake8 = "^7.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
